2014-11-23  Arjen Markus  <arjenmarkus@users,sourceforge.net>
	* plotchart.tcl: Support -xlabels and -ylabels option (request by Ron Fox), also implement -isometric for
	                 XY-plots (request by Nick F.)
	* plotaxis.tcl: Support -axestozero option (request by Necrosporus)
	* plotchart.man: Describe new options -axestozero and -isometric
	* plotchart.man: Corrected error in documentation (ticket 2733f5a9517e312e1f43d81f7bb546feaf375a99)
	* pkgIndex.tcl: Bumped version to 2.3.2
	* xyplot.tcl: Disable running the example code at the end

2014-06-21  Arjen Markus  <arjenmarkus@users,sourceforge.net>
	* plotchart.tcl: Add new commands for timecharts (addperiod, addmilestone and option to vertline)
	                 as suggested by Nick Matthews; also the interpolatedata command for 3D-plots
	* plotchart.man: Document new commands for timecharts, document new tags for 3D-plots
	* plotpriv.tcl: Implement the new commands for timecharts and interpolatedata for 3D-plots
	* plot3d.tcl: Add tags for the data objects (data and line) and method interpolatedata
	* plotdemos1.tcl: Illustrate the new interpolate subcommand for 3D-plots
	* plotdemos7.tcl: Illustrate the new subcommands for timecharts
	* pkgIndex.tcl: Bumped the version to 2.3.1 because of the new commands and improvements

2014-03-19  Arjen Markus  <arjenmarkus@users,sourceforge.net>
	* plotchart.tcl: Add source file "plotstatustimeline.tcl" - supplied by Sean Woods
	* plotstatustimeline.tcl: New source file implementing the new status timeline plot type - supplied by Sean Woods
	* plotdemos18.tcl: New example illustrating the new status timeline plot type - supplied by Sean Woods
	* plotchart.man: Description of the new plot type
	* pkgIndex.tcl: Bumped the version to 2.3.0 because of the new plot type

2014-03-14  Arjen Markus  <arjenmarkus@users,sourceforge.net>
	* plotchart.tcl: Forgot to bump the version to 2.2.2 in the "provide" statement (ticket 530c40d269eb3bc4523115e121c38e7a6c047632)
